src/test/deca/syntax/valid/null/null_comparison.deca
// Description:
//    Tests a syntactically correct program for comparing a variable to null
//
// Results:
//    No errors.
//
// History:
//    created on 07/01/2025

{
    Object a = null;
    if (a == null) {
        println("a is null");
    }
}